--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,12 @@
   font-family: "Work Sans", sans-serif;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .primary-btn {
   font-weight: 600;
   height: 64px;
@@ -81,6 +87,50 @@ nav {
 /* --------------------------------
 Quick feature style-sheets
 ---------------------------------- */
+.quick-feature-container {
+  margin: 0 30px;
+  margin-top: 130px;
+
+  width: 1072px;
+}
+
+.quick-features {
+  display: flex;
+  align-items: center;
+}
+.quick-features-teams {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+.quick-features-team img {
+  width: 342px;
+  height: 342px;
+  border-radius: 8px;
+}
+
+.quick-feature-info {
+  margin-left: 73px;
+}
+.quick-feature-title {
+  font-weight: 500;
+  font-size: 45px;
+  color: #131313;
+}
+.title-part1 {
+  color: #727272;
+}
+.title-part2 {
+  color: #ff900e;
+}
+.quick-feature-description {
+  margin-top: 24px;
+  margin-bottom: 32px;
+  font-weight: 400;
+  font-size: 16px;
+  color: #727272;
+  opacity: 0.65;
+}
 
 /* media query */
 
@@ -104,5 +154,14 @@ Quick feature style-sheets
     font-size: 100%;
   }
 
-  /* -------header  start   */
+  /* -------quick feature  start   */
+  .quick-feature-container {
+    width: 100%;
+  }
+  .quick-features {
+    flex-direction: column;
+  }
+  .quick-features-teams {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
