--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,6 @@
 /* google font  */
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap");
 
-.just-space {
-  height: 400px;
-}
-
 * {
   padding: 0;
   margin: 0;
@@ -13,7 +9,8 @@
 .container {
   width: 1072px;
 }
-main {
+main,
+footer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -234,8 +231,30 @@ article {
 .sponsors {
   display: flex;
   justify-content: space-between;
+  margin: 50px 0px 130px 0;
+}
+.Sponsors-thumbnail img {
+  width: 105px;
+  height: 50px;
+  filter: grayscale(100%);
 }
 
+/* --------------------------------
+       footer  
+---------------------------------- */
+
+.footer {
+  height: 100px;
+  background: #fff4e7;
+  border-radius: 8px;
+  margin-bottom: 216px;
+}
+.footer-description {
+  font-weight: 400;
+  font-size: 20px;
+  color: #424242;
+  text-align: center;
+}
 /* --------------------------------
        media query 
 ---------------------------------- */
@@ -248,7 +267,8 @@ article {
   nav,
   .nav-list,
   .banner-thumbnail,
-  .awards {
+  .awards,
+  .sponsors {
     flex-direction: column;
     /* align-items: center; */
   }
