--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,9 @@
   font-family: "Work Sans", sans-serif;
 }
 .container {
-  width: 1072px;
+  max-width: 1150px;
+  width: 100%;
+  max-width: 1150px;
 }
 main,
 footer {
@@ -70,7 +72,8 @@ nav {
 
 /* --------banner-------- */
 .banner-info {
-  width: 820px;
+  max-width: 820px;
+  width: 100%;
   margin-top: 110px;
   text-align: center;
 }
@@ -94,8 +97,6 @@ Quick feature style-sheets
 .quick-feature {
   margin: 0 30px;
   margin-top: 130px;
-
-  width: 1072px;
 }
 
 .quick-features {
@@ -108,13 +109,12 @@ Quick feature style-sheets
   gap: 24px;
 }
 .quick-features-team img {
-  width: 342px;
-  height: 342px;
+  width: 280px;
   border-radius: 8px;
 }
 
 .quick-feature-info {
-  margin-left: 73px;
+  margin-left: 70px;
 }
 .quick-feature-title {
   font-weight: 500;
